<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="360dp"
    android:layout_height="wrap_content"
    android:layout_gravity="center">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:cardCornerRadius="20dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="500dp">

            <ImageButton
                android:id="@+id/btn_cancel"
                android:layout_width="308dp"
                android:layout_height="92dp"

                android:background="@android:color/transparent"
                android:foregroundGravity="center"
                android:scaleX="0.6"
                android:scaleY="0.7"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="1.0"
                app:srcCompat="@drawable/btn" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="OK"
                android:textColor="#FFFFFF"
                android:textSize="30sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/btn_cancel"
                app:layout_constraintEnd_toEndOf="@+id/btn_cancel"
                app:layout_constraintStart_toStartOf="@+id/btn_cancel"
                app:layout_constraintTop_toTopOf="@+id/btn_cancel"
                app:layout_constraintVertical_bias="0.461" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:foregroundGravity="center"
                android:gravity="center"
                android:text="@string/tutorial2"
                android:textSize="20sp"
                app:layout_constraintBottom_toTopOf="@+id/btn_cancel"
                app:layout_constraintEnd_toEndOf="@+id/textView4"
                app:layout_constraintHorizontal_bias="0.502"
                app:layout_constraintStart_toStartOf="@+id/textView4"
                app:layout_constraintTop_toBottomOf="@+id/imageView3"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="347dp"
                android:layout_height="49dp"
                android:foregroundGravity="center"
                android:gravity="center"
                android:text="@string/tutorial2_2"
                android:textSize="20sp"
                app:layout_constraintBottom_toTopOf="@+id/btn_cancel"
                app:layout_constraintEnd_toEndOf="@+id/textView5"
                app:layout_constraintHorizontal_bias="0.538"
                app:layout_constraintStart_toStartOf="@+id/textView5"
                app:layout_constraintTop_toBottomOf="@+id/textView3"
                app:layout_constraintVertical_bias="0.005" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="345dp"
                android:layout_height="51dp"
                android:layout_marginBottom="32dp"
                android:foregroundGravity="center"
                android:gravity="center"
                android:text="@string/tutorial2_3"
                android:textSize="20sp"
                app:layout_constraintBottom_toTopOf="@+id/btn_cancel"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.533"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView4"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="345dp"
                android:layout_height="51dp"
                android:layout_marginBottom="32dp"
                android:foregroundGravity="center"
                android:gravity="center"
                android:text="@string/tutorial2_4"
                android:textSize="20sp"
                app:layout_constraintBottom_toTopOf="@+id/btn_cancel"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.545"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView5"
                app:layout_constraintVertical_bias="0.0" />

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="251dp"
                android:layout_height="138dp"
                android:scaleX="1.1"
                android:scaleY="1.1"
                app:layout_constraintBottom_toTopOf="@+id/btn_cancel"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0"
                app:srcCompat="@drawable/chr_10" />

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="49dp"
                android:layout_height="44dp"
                app:layout_constraintBottom_toTopOf="@+id/btn_cancel"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.501"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView4"
                app:layout_constraintVertical_bias="0.0"
                app:srcCompat="@drawable/ic_hunger" />

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="49dp"
                android:layout_height="44dp"
                android:layout_marginTop="2dp"
                app:layout_constraintBottom_toTopOf="@+id/btn_cancel"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.501"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView6"
                app:layout_constraintVertical_bias="0.0"
                app:srcCompat="@drawable/ic_relax" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>